manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: etos-api
  labels:
    app.kubernetes.io/name: etos-api
    app.kubernetes.io/part-of: etos
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: etos-api
    app.kubernetes.io/component: api
